; ModuleID = '/home/carl/AnghaBench/linux/drivers/ipack/extr_ipack.c_id_device_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ipack/extr_ipack.c_id_device_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.ipack_device = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"0x%02x\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"0x%04x\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @id_device_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @id_device_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.ipack_device*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = call %struct.ipack_device* @to_ipack_dev(%struct.device* %9)
  store %struct.ipack_device* %10, %struct.ipack_device** %8, align 8
  %11 = load %struct.ipack_device*, %struct.ipack_device** %8, align 8
  %12 = getelementptr inbounds %struct.ipack_device, %struct.ipack_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %26 [
    i32 129, label %14
    i32 128, label %20
  ]

14:                                               ; preds = %3
  %15 = load i8*, i8** %7, align 8
  %16 = load %struct.ipack_device*, %struct.ipack_device** %8, align 8
  %17 = getelementptr inbounds %struct.ipack_device, %struct.ipack_device* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 %19, i32* %4, align 4
  br label %29

20:                                               ; preds = %3
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.ipack_device*, %struct.ipack_device** %8, align 8
  %23 = getelementptr inbounds %struct.ipack_device, %struct.ipack_device* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @sprintf(i8* %21, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %24)
  store i32 %25, i32* %4, align 4
  br label %29

26:                                               ; preds = %3
  %27 = load i32, i32* @EIO, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %26, %20, %14
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.ipack_device* @to_ipack_dev(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
